--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -61,11 +61,24 @@
 }
 
 .header .logo-name {
-  font-family: "Agustina Regular";
+  font-family: "Fantasy", Arial, sans-serif;
   font-weight: bold;
   font-variant-ligatures: no-common-ligatures;
   -webkit-font-variant-ligatures: no-common-ligatures;
   padding: 0 10px;
+  font-size: 1.15em;
+  color: #333;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 5px;
+  transition: background-color 0.2s ease-out;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.header .logo-name:hover {
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 /* menu */
