--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -61,7 +61,7 @@
 }
 
 .header .logo-name {
-  font-family: "Fantasy", Arial, sans-serif;
+  font-family: "Lobster";
   font-weight: bold;
   font-variant-ligatures: no-common-ligatures;
   -webkit-font-variant-ligatures: no-common-ligatures;
