--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 @font-face {
-  font-family: "Agustina Regular";
+  font-family: "Lobster";
   font-style: normal;
   font-weight: normal;
-  src: local("Agustina Regular"),
-    url("./assets/fonts/Agustina.woff") format("woff");
+  src: local("Lobster"),
+    url("./assets/fonts/Lobster-Regular.ttf") format("woff");
   font-display: swap;
 }
 @font-face {
